--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ header {
     align-items: center;
     position: relative;
     background-image: url('background1.jpg');
-    background-size: cover; /* Change this line */
+    background-size: cover;
     background-position: center;
     height: 500px;
 }
@@ -30,13 +30,13 @@ header {
 .header-text {
     color: white;
     text-align: center;
-    font-size: 3em; /* Increase the font size */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add text shadow */
+    font-size: 3em;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 #headerImage {
     width: 100%;
-    height: 500px; /* Adjust this value */
+    height: 500px;
     object-fit: cover;
 }
 
@@ -73,7 +73,7 @@ ul {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(210px, 1fr));
     gap: 20px;
-    padding: 0px; /* Add desired padding value */
+    padding: 10px;
 }
 
 #productList li:hover {
@@ -98,7 +98,6 @@ ul {
     white-space: nowrap;
 }
 
-
 #productList img {
     max-width: 100%;
     max-height: 110px;
@@ -109,11 +108,12 @@ ul {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 auto; /* Add this line */
+    margin: 0 auto;
 }
 
-#productList h2, #productList p {
-    margin: 5px 0 5px 0;
+#productList h2,
+#productList p {
+    margin: 5px 0;
 }
 
 #productList p:last-child {
@@ -140,7 +140,6 @@ ul {
 }
 
 .modal {
-    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -154,19 +153,22 @@ ul {
 }
 
 .modal-content {
-    display: flex;
     justify-content: center;
     align-items: center;
     overflow: hidden;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
-    padding: 40px;
+    width: 400px;
 }
 
 .modal-content img {
-    max-width: 500px;
-    max-height: 500px;
+    max-width: 80%;
+    max-height: 80%;
+    object-fit: contain;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    border-radius: 5px;
 }
 
 .modal-content > div {
@@ -185,10 +187,11 @@ ul {
 
 #productModalContent {
     display: flex;
-    align-items: center;
+    justify-content: center;
 }
 
-#productModalContent h2, #productModalContent p {
+#productModalContent h2,
+#productModalContent p {
     display: inline-block;
     vertical-align: top;
     margin: 0;
